<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#2b2a32">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/motherregistration"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:textColor="#992436"
        android:layout_marginTop="10dp"
        android:textSize="24dip"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mothername"
        android:id="@+id/textView6"
        android:textColor="#ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="-40dp"
        android:inputType="textPersonName"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fathername"
        android:id="@+id/textView38"
        android:textColor="#ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText11"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="-40dp"
        android:inputType="textPersonName"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mobile"
        android:id="@+id/textView8"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_marginTop="-40dp"
        android:layout_marginLeft="135dp"
        android:maxLength="10"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aadhar"
        android:id="@+id/textView7"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_marginLeft="135dp"
        android:maxLength="12"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:layout_marginTop="-40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvPIN"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:id="@+id/btnScan"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:background="#992436"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/mbtnSub"
        android:layout_gravity="center_horizontal"
        android:background="#992436"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        android:visibility="invisible" />

</LinearLayout>