<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#2b2a32">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/childregistration"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:textColor="#992436"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="24dip" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.39"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/child"
            android:id="@+id/textView11"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_gravity="left|top"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dob"
            android:id="@+id/textView12"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gender"
            android:id="@+id/textView4"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_gravity="left|bottom" />

        <ImageView
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:id="@+id/btnCal"
            android:layout_gravity="right|center_vertical"
            android:background="#992436"
            android:src="@drawable/cal"
            android:layout_marginRight="5dp"
            android:clickable="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_marginLeft="100dip"
            android:visibility="visible"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_gravity="center"
            android:layout_marginRight="60dp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_gravity="right|top"
            android:layout_marginLeft="120dip"
            android:textColor="#ffffff" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/spin_gender"
            android:layout_gravity="right|bottom"
            android:entries="@array/gender_arrays"
            android:prompt="@string/gender_prompt"
            android:paddingLeft="10dp"
            android:layout_marginRight="5dip"
            android:layout_marginLeft="120dip"
            android:background="#ffffff" />
    </FrameLayout><![CDATA[







    CalendarView
        android:layout_width="196dp"
        android:layout_height="197dp"
        android:id="@+id/calendarView"
        android:layout_gravity="right"
        android:visibility="invisible" />













    ]]>

    <Button
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSub"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:background="#992436" />

</LinearLayout>