<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:src="@mipmap/ic_launcher" />
            <!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/anmlogin"
                    android:id="@+id/textView31"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp" />
            -->

            <EditText
                android:id="@+id/etUN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/abc_alpha_et_background"
                android:hint="@string/aadhar"
                android:inputType="numberSigned"
                android:maxLength="12"
                android:padding="10dip"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/abc_alpha_et_background"
                android:hint="@string/password"
                android:inputType="number|textPassword"
                android:maxLength="4"
                android:padding="10dip"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dip"
                android:layout_height="50dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="50dp"
                android:layout_weight="0"
                android:background="@drawable/abc_alpha_btn_background"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:text="@string/newuser"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:text="@string/forgotpassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#992436" />


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>